--- a/team/index.html
+++ b/team/index.html
@@ -1,3 +1,4 @@
 ---
 layout: page
 ---
+We’re a group of Russian undergraduates who recently started a new student organization on campus in response to the war in Ukraine. One of our initiatives is to host a series of talks with prominent Russian investors, entrepreneurs, scholars, and politicians who are actively supporting anti-war movements and Ukraine relief efforts.
